[gd_scene load_steps=34 format=3 uid="uid://cfsmg01pajrbq"]

[ext_resource type="Texture2D" uid="uid://d1wsxi3s6yt4i" path="res://PACK ARTES JOGO GAMECRAFT/JOGADOR/IDLE/000.png" id="1_2iwui"]
[ext_resource type="Script" uid="uid://d0vbn77f7wdyu" path="res://ninja.gd" id="1_jc8pj"]
[ext_resource type="Texture2D" uid="uid://bnkqkgyw3l3dp" path="res://PACK ARTES JOGO GAMECRAFT/JOGADOR/IDLE/001.png" id="2_novt4"]
[ext_resource type="Texture2D" uid="uid://ddi23skrng7u2" path="res://PACK ARTES JOGO GAMECRAFT/JOGADOR/IDLE/002.png" id="3_wg40q"]
[ext_resource type="Texture2D" uid="uid://bnmqefnu6724w" path="res://PACK ARTES JOGO GAMECRAFT/JOGADOR/IDLE/003.png" id="4_sgcu8"]
[ext_resource type="Texture2D" uid="uid://comvgykhp0ty2" path="res://PACK ARTES JOGO GAMECRAFT/JOGADOR/IDLE/004.png" id="5_up6o0"]
[ext_resource type="Texture2D" uid="uid://dkn6ykucvp6f8" path="res://PACK ARTES JOGO GAMECRAFT/JOGADOR/IDLE/005.png" id="6_f7ob3"]
[ext_resource type="Texture2D" uid="uid://dexl18wh2u2q0" path="res://PACK ARTES JOGO GAMECRAFT/JOGADOR/IDLE/006.png" id="7_mxpm2"]
[ext_resource type="Texture2D" uid="uid://bad4k46sjwr7" path="res://PACK ARTES JOGO GAMECRAFT/JOGADOR/IDLE/007.png" id="8_e52k1"]
[ext_resource type="Texture2D" uid="uid://da3llaj5rn4m6" path="res://PACK ARTES JOGO GAMECRAFT/JOGADOR/IDLE/008.png" id="9_67kab"]
[ext_resource type="Texture2D" uid="uid://cscg3sweahwm8" path="res://PACK ARTES JOGO GAMECRAFT/JOGADOR/IDLE/009.png" id="10_00pq1"]
[ext_resource type="Texture2D" uid="uid://bhntwxvkibaqo" path="res://PACK ARTES JOGO GAMECRAFT/JOGADOR/IDLE/010.png" id="11_xf3wc"]
[ext_resource type="Texture2D" uid="uid://yhuxpo112uy6" path="res://PACK ARTES JOGO GAMECRAFT/JOGADOR/JUMP/000.png" id="12_jc8pj"]
[ext_resource type="Texture2D" uid="uid://dqvhnsuch3u46" path="res://PACK ARTES JOGO GAMECRAFT/JOGADOR/ATACK/000.png" id="13_5vspq"]
[ext_resource type="AudioStream" uid="uid://bf03uvlhm8qi1" path="res://PACK ARTES JOGO GAMECRAFT/AUDIO/Sounds/Jump.wav" id="13_xf3wc"]
[ext_resource type="Texture2D" uid="uid://bjcron7jvi1go" path="res://PACK ARTES JOGO GAMECRAFT/JOGADOR/ATACK/001.png" id="14_d5d5r"]
[ext_resource type="Texture2D" uid="uid://cbo7caewd08ri" path="res://PACK ARTES JOGO GAMECRAFT/JOGADOR/ATACK/002.png" id="15_npo3e"]
[ext_resource type="AudioStream" uid="uid://b1dgqyo6w273" path="res://PACK ARTES JOGO GAMECRAFT/AUDIO/Sounds/ataque.wav" id="17_jc8pj"]
[ext_resource type="Texture2D" uid="uid://bt3lwjme815ku" path="res://PACK ARTES JOGO GAMECRAFT/JOGADOR/RUN/000.png" id="18_5vspq"]
[ext_resource type="Texture2D" uid="uid://ctv8l4xushqgp" path="res://PACK ARTES JOGO GAMECRAFT/JOGADOR/RUN/001.png" id="19_d5d5r"]
[ext_resource type="Texture2D" uid="uid://bd0l3chepnpqi" path="res://PACK ARTES JOGO GAMECRAFT/JOGADOR/RUN/002.png" id="20_npo3e"]
[ext_resource type="Texture2D" uid="uid://c4yts5t7p04f" path="res://PACK ARTES JOGO GAMECRAFT/JOGADOR/RUN/003.png" id="21_q3t85"]
[ext_resource type="Texture2D" uid="uid://da11ib17sf8pf" path="res://PACK ARTES JOGO GAMECRAFT/JOGADOR/RUN/004.png" id="22_vwqcx"]
[ext_resource type="Texture2D" uid="uid://c2h0w73v15n60" path="res://PACK ARTES JOGO GAMECRAFT/JOGADOR/RUN/005.png" id="23_g00m1"]
[ext_resource type="Texture2D" uid="uid://crxlsgndlr6wk" path="res://PACK ARTES JOGO GAMECRAFT/JOGADOR/RUN/006.png" id="24_27xdw"]
[ext_resource type="Texture2D" uid="uid://b7mvksxa3vohj" path="res://PACK ARTES JOGO GAMECRAFT/JOGADOR/RUN/007.png" id="25_a1n7a"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q3t85"]
size = Vector2(66, 130.75)

[sub_resource type="Animation" id="Animation_vwqcx"]
resource_name = "idle"
length = 1.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [ExtResource("1_2iwui"), ExtResource("2_novt4"), ExtResource("3_wg40q"), ExtResource("4_sgcu8"), ExtResource("5_up6o0"), ExtResource("6_f7ob3"), ExtResource("7_mxpm2"), ExtResource("8_e52k1"), ExtResource("9_67kab"), ExtResource("10_00pq1"), ExtResource("11_xf3wc")]
}

[sub_resource type="Animation" id="Animation_g00m1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_2iwui")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("JumpSound:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_27xdw"]
resource_name = "jump"
length = 0.3
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("12_jc8pj")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("JumpSound:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.0666667),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "audio"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("JumpSound")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("13_xf3wc")
}],
"times": PackedFloat32Array(0)
}
tracks/2/use_blend = true

[sub_resource type="Animation" id="Animation_a1n7a"]
resource_name = "ataque"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [ExtResource("1_2iwui"), ExtResource("13_5vspq"), ExtResource("14_d5d5r"), ExtResource("15_npo3e"), ExtResource("1_2iwui")]
}

[sub_resource type="Animation" id="Animation_xmkrv"]
resource_name = "run"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [ExtResource("18_5vspq"), ExtResource("19_d5d5r"), ExtResource("20_npo3e"), ExtResource("21_q3t85"), ExtResource("22_vwqcx"), ExtResource("23_g00m1"), ExtResource("24_27xdw"), ExtResource("25_a1n7a")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xmkrv"]
_data = {
&"RESET": SubResource("Animation_g00m1"),
&"ataque": SubResource("Animation_a1n7a"),
&"idle": SubResource("Animation_vwqcx"),
&"jump": SubResource("Animation_27xdw"),
&"run": SubResource("Animation_xmkrv")
}

[node name="Ninja" type="CharacterBody2D"]
script = ExtResource("1_jc8pj")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(173.667, 415.356)
scale = Vector2(3.55556, 7.35971)
texture = ExtResource("1_2iwui")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(187, 433.375)
shape = SubResource("RectangleShape2D_q3t85")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_xmkrv")
}

[node name="AttackSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("17_jc8pj")

[node name="JumpSound" type="AudioStreamPlayer" parent="."]

[node name="WalkSound" type="AudioStreamPlayer" parent="."]
